fixed horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,14 @@
 body {
     margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
+    padding: 1px;
+    width: 100%;
+    height: 100%;
     font-family: 'Poppins', Helvetica, sans-serif;
     font-weight: 300;
 }
 
 main {
-    width: 100%;
-    height: 100%;
+    padding: 15px;
 }
 
 header {
@@ -17,10 +16,10 @@ header {
     background: #ffffff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    padding-right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
 }
 
 .title {
@@ -50,13 +49,18 @@ header {
     transition-timing-function: ease-in-out;
 }
 
-#home-button a {
+#home-button a, .home-nav-btn {
     text-decoration: none;
     color: #333;
 }
 
-.page-box {
-    padding: 15px;    
+.home-nav-btn:hover {
+    text-decoration: underline;
+}
+
+.home-nav-btn {
+    display: block;
+    width: fit-content;
 }
 
 .crud-title, .navbar {
